package fr.fges.tournament;

import java.util.List;
import java.util.Scanner;

public interface Tournament {
    void playTournament(List<Player> players, Scanner scanner);
}
